--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fscvirtualid.jbm"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="Alpha 1.2" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -18,7 +18,7 @@
 
         
         <activity
-            android:name="com.fscvirtualid.jbm.Splash"
+            android:name="Splash"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,10 +26,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.fscvirtualid.jbm.MainActivity"></activity>
-        <activity android:name="com.fscvirtualid.jbm.LoginActivity"></activity>
-        <activity android:name="com.fscvirtualid.jbm.RegisterActivity"></activity>
-        <activity android:name="com.fscvirtualid.jbm.SecuredActivity"></activity>
+        <activity android:name="MainActivity"></activity>
+        <activity android:name="LoginActivity"></activity>
+        <activity android:name="RegisterActivity"></activity>
+        <activity android:name="SecuredActivity"></activity>
+        <activity android:name="ForgotPasswordActivity"></activity>
+        <activity android:name="ChangePasswordActivity"></activity>
     </application>
 
 </manifest>
